--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
     height: 100vh;
     background-image: url(assets/background.jpg);
     background-size: cover;
-    opacity: 0.5;
+    opacity: 100%;
+    
 }
 
 .nav img {
