--- a/style.css
+++ b/style.css
@@ -4,25 +4,23 @@ body {
     padding: 0;
     flex-wrap: wrap;
     font-family: "Dosis", sans-serif;
+    
 }
 
 .header {
     width: 100%;
     height: 100vh;
-    background-image: url(assets/background.jpg);
-    background-size: cover;
-    opacity: 100%;
-    
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8)),
+    url("assets/background.jpg");
+    background-size: cover;    
 }
 
 .nav img {
-    width: 10rem;
-    height: 4rem;
-    flex-wrap: wrap;
+    width: 12rem;
+    height: 5rem;
     position: relative;
-    left: 2rem;
-    top: 1.5rem;
-    opacity: 1;
+    left: 8rem;
+    
 }
 
 #language {
@@ -31,10 +29,11 @@ body {
     border: black solid transparent;
     border-radius: 0.1rem;
     position: relative;
-    left: 50rem;
-    right: 2rem;
-    font-size: 1.3rem;
-    opacity: 1;
+    left: 45rem;
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 0;
+    
 }
 
 #button {
@@ -43,32 +42,90 @@ body {
     border: red solid;
     border-radius: 0.1rem;
     position: relative;
-    left: 51rem;
-    font-size: 1.1rem;
+    left: 46rem;
+    font-size: 1.5rem;
+    
 }
-
-.header h1,
-h2 {
+.header h1
+{
     color: #fff;
     text-align: center;
     position: relative;
-    top: 10rem;
+    top: 5rem;
+    font-size: 2rem;
+    font-weight: 1700;
+    
+}
+
+
+.header h2 {
+    color: #fff;
+    text-align: center;
+    position: relative;
+    top: 5rem;
+    font-size: 1rem;
+    font-weight: 1500;
 }
 
 .header input {
-    color: #fff;
+    background: #294767;
     text-align: center;
     position: relative;
-    top: 10rem;
-    left: 30rem;
-    text-align: center;
+    top: 5rem;
+    left: 20rem;
+    text-align: left;
+    background-image: none transparent;
+    line-height: 1.5rem;
+    font-size: 1.5rem;
+    width: 25%;
+    padding: 1.5rem 1rem 0.5rem;
+    opacity: 0.8;
+    border-radius: 0.2rem;
 }
 
 .get {
+    background-color: red;
     color: #fff;
-    text-align: center;
     position: relative;
-    top: 10rem;
-    left: 30rem;
+    top: 5rem;
+    left: 20rem;
     text-align: center;
+    font-size: 2rem;
+    width: 20%;
+    padding: 1rem 1rem 0.5rem;
+    border-radius: 0.2rem;
+    
+}
+hr{
+    height: 0.5rem;
+    color: #888888ef;
+    border: none;
+}
+.tv{
+    background-color: #000;
+    height: auto;
+    width: auto;
+    display: flex;
+}
+.tv-text {
+    color: #fff;
+    font-size: 1.5rem;
+    position: relative;
+    left: 7rem;
+    top: 5rem;
+    
+}
+.tv h1{
+    font-weight: 900;
+    font-size: 3.5rem;
+    color: #fff;
+}
+.tv p{
+    font-weight: 400;
+    font-size: 1.5rem;
+    color: #fff;
+}
+.tv-img{
+    position: relative;
+    left: 10rem;
 }
